--- a/node-mongo-deployment/node-deploy.yml
+++ b/node-mongo-deployment/node-deploy.yml
@@ -8,5 +8,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-
+  name: node
 spec:
+  selector:
+    matchLabels:
+      app: node
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: node
+    spec:
+      containers:
+      - name: node
+        image: am93596/sre_node_app
+ 
+        ports:
+        - containerPort: 3000
+        
+        #env:
+        #- name: DB_HOST
+        #  value: mongodb://mongo:27017/posts
+  
