--- a/node-mongo-deployment/mongodb-deploy.yml
+++ b/node-mongo-deployment/mongodb-deploy.yml
@@ -18,3 +18,11 @@ spec:
 
         ports:
         - containerPort: 27017
+        volumeMounts:
+        - name: storage
+          mountPath: /data/db
+
+      volumes:
+      - name: storage
+        persistentVolumeClaim:
+          claimName: mongo-db-pvc
